[project]
name = "reascript-parse"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "James Wong", email = "james.wong@aigniter.com" }
]
dependencies = [
    "beautifulsoup4>=4.12.3",
]
readme = "README.md"
requires-python = ">= 3.8"

[project.scripts]
reascript-parse = "reascript_parse:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "black>=24.2.0",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/reascript_parse"]
